bridges map and breadcrumb

--- a/bridges.html
+++ b/bridges.html
@@ -145,51 +145,34 @@
     </div>
 
 
-    <section class="tenders-details-page">
+    <section class="bridges-page">
         <div class="container">
-            <div class="single-tender">
-                <h2 class="heading">مديرعام العلاقات العلمية الخارجية</h2>
-                <div class="time">
-                    <img src="./images/icons/clock.svg" alt="">
-                    <span>الإثنين 14 ابريل 2020 - 08:30 م</span>
-                </div>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">المشاريع</a></li>
+                    <li class="breadcrumb-item"><a href="#">الكباري</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">خريطة شبكة الكباري في مصر</li>
+                </ol>
+            </nav>
 
-                <div class="desc">
-                    <!-- html content coming from DB -->
-                    <p>المستندات المطلوبة	
-                        استيفاء نموذج شغل الوظيفة من الامانة الفنية للجنة الدائمة للوظائف القيادية مرفقا به
-                        أ - بيان حالة وظيفية معتمد من جهة العمل الأصلية + 7 صور شخصية + صورة بطاقة سارية +صورة من المؤهل الدراسي
-                        ب – المستندات الدالة على الاتى :-
-                        1- القدرات العلمية : - حصوله على درجات علمية واجادة لغات اجنبية ومعرفة بعلوم الحاسب الالي وكذا الاشتراك فى المؤتمرات واعداد البحوث 
-                        2- التاريخ الوظيفى : - الانجازات السابقة وتقارير تقويم الاداء 
-                        3- المقترح التطويري : - عن الوحدة المتقدم لها 
-                        4 – السمات الشخصية : - مهارات القيادة واتخاذ القرارات وحل المشكلات وادارة الازمات ومهارات الاتصال والاقناع</p>
-                    <div class="share">
-                        <span>مشاركة المناقصة</span>
-                        <div class="icons">
-                            <img src="./images/icons/facebook-app-symbol.svg" alt="">
-                            <img src="./images/icons/whatsapp.svg" alt="">
-                            <img src="./images/icons/instagram.svg" alt="">
-                        </div>
-                    </div>
-                </div>
+            <h2 class="heading">خريطة شبكة الكباري في مصر</h2>
 
-            </div>
-            <div class="attachments">
-                <h3>ملفات مرفقة</h3>
-                <div class="files">
-                    <div class="file">
-                        <img src="./images/icons/ic-ic-pdf.svg" alt="">
-                        <span>ملف المناقصة.pdf</span>
-                    </div>
-                    <div class="file">
-                        <img src="./images/icons/ic-ic-pdf.svg" alt="">
-                        <span>ملف المناقصة.pdf</span>
-                    </div>
-                </div>
-
-            </div>
-
+            <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">القاهرة والدلتا</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">الصعيد</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">شبة جزيرة سيناء</a>
+                </li>
+              </ul>
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">I have no image</div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">I have no image</div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">I have no image</div>
+              </div>
 
         </div>
     </section>
