--- a/bridges-projects.html
+++ b/bridges-projects.html
@@ -160,10 +160,10 @@
             <div class="bridges-projects">
               <div class="bridges-project">
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-12 col-md-4">
                     <img src="./images/background.jpg" alt="">
                   </div>
-                  <div class="col-8">
+                  <div class="col-12 col-md-8">
                     <h3>اسم المشروع</h3>
                     <div class="desc">
                       <div class="location">
@@ -188,10 +188,10 @@
               </div>
               <div class="bridges-project">
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-12 col-md-4">
                     <img src="./images/background.jpg" alt="">
                   </div>
-                  <div class="col-8">
+                  <div class="col-12 col-md-8">
                     <h3>اسم المشروع</h3>
                     <div class="desc">
                       <div class="location">
