--- a/complain.html
+++ b/complain.html
@@ -152,7 +152,7 @@
             <div class="contact-form">
                 <form action="#">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-12 col-md-5">
                             <div class="form-group">
                                 <label for="name">الإسم</label>
                                 <input type="text" placeholder="أدخل إسمك" class="form-control form-control-lg" id="name">
@@ -165,16 +165,21 @@
                                 <label for="phone">رقم الموبايل</label>
                                 <input type="text" placeholder="ادخل رقم موبايلك" class="form-control form-control-lg" id="phone">
                             </div>
-                            <div class="send-btn">
-                                <button class="btn">أرسل الشكوى</button>
-                            </div>
+
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-12 col-md-7">
                             <div class="form-group">
                                 <label for="message">الرسالة</label>
                                 <textarea id="message" placeholder="ضع رسالتك هنا" rows="8" class="form-control form-control-lg"></textarea>
                               </div>
                         </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-5">
+                        <div class="send-btn">
+                          <button class="btn">أرسل الشكوى</button>
+                      </div>
+                      </div>
                     </div>
                 </form>
             </div>
