--- a/roads-safety.html
+++ b/roads-safety.html
@@ -159,56 +159,56 @@
 
             <div class="signs">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
                             <p>وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.وصف العلامة هنا وقد يتكون من ثلاث أسطر.</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="sign text-center">
                             <img src="./images/186-1869852-traffic-sign-road-sign-shield@2x.png" alt="">
                             <h5>اسم العلامة</h5>
