--- a/highways.html
+++ b/highways.html
@@ -169,7 +169,7 @@
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="loads">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <div class="load">
                                     <div class="row">
                                         <div class="col-6">
@@ -183,7 +183,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <div class="load">
                                     <div class="row">
                                         <div class="col-6">
@@ -197,7 +197,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <div class="load">
                                     <div class="row">
                                         <div class="col-6">
@@ -211,7 +211,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <div class="load">
                                     <div class="row">
                                         <div class="col-6">
@@ -231,7 +231,7 @@
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="stations">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <div class="station">
                                     <h3>الهايكستيب</h3>
                                     <div class="location">
@@ -268,7 +268,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <div class="station">
                                     <h3>الهايكستيب</h3>
                                     <div class="location">
