fixed header issue and highways page

--- a/highways.html
+++ b/highways.html
@@ -280,6 +280,9 @@
                                             <h6>ملاكي</h6>
                                             <span class="badge">115  جنية / شهر</span>
                                             <span class="badge">900  جنية / 3 أشهر</span>
+                                            <span class="badge">900  جنية / 3 أشهر</span>
+                                            <span class="badge">900  جنية / 3 أشهر</span>
+                                            <span class="badge">900  جنية / 3 أشهر</span>
                                         </div>
                                         <div class="type">
                                             <h6>الميكروباص</h6>
