--- a/confirm-code.html
+++ b/confirm-code.html
@@ -145,42 +145,39 @@
     </div>
 
 
-    <section class="contact-page">
+    <section class="confirm-code-page">
         
         <div class="container">
-            <h2 class="heading">صندوق الشكاوي</h2>
+            <!-- <h2 class="heading">قم بمراسلتنا</h2> -->
             <div class="base-form">
+                <h2 class="text-center">رمز التأكيد</h2>
+                <p class="desc text-center">تم إرسال رمز تأكيد إلى رقم الهاتف برجاء ادخاله</p>
+
                 <form action="#">
-                    <div class="row">
-                        <div class="col-12 col-md-5">
-                            <div class="form-group">
-                                <label for="name">الإسم</label>
-                                <input type="text" placeholder="أدخل إسمك" class="form-control form-control-lg" id="name">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">البريد الإلكتروني</label>
-                                <input type="text" placeholder="ادخل بريدك الإلكتروني" class="form-control form-control-lg" id="email">
-                            </div>
-                            <div class="form-group">
-                                <label for="phone">رقم الموبايل</label>
-                                <input type="text" placeholder="ادخل رقم موبايلك" class="form-control form-control-lg" id="phone">
-                            </div>
+                    <div class="row justify-content-center">
+                        <div class="col-12">
+
+                          <div class="codes">
+                            <input type="text">
+                            <input type="text">
+                            <input type="text">
+                            <input type="text">
+                          </div>
 
                         </div>
-                        <div class="col-12 col-md-7">
-                            <div class="form-group">
-                                <label for="message">الرسالة</label>
-                                <textarea id="message" placeholder="ضع رسالتك هنا" rows="8" class="form-control form-control-lg"></textarea>
-                              </div>
-                        </div>
                     </div>
-                    <div class="row">
+                    <p class="message text-center">المحاولة مجددا بعد 00:30 ثانية</p>
+                    <div class="row justify-content-center">
                       <div class="col-md-5">
                         <div class="send-btn">
-                          <button class="btn">أرسل الشكوى</button>
+                          <button class="btn">تأكيد الحساب</button>
                       </div>
                       </div>
                     </div>
+                    <!-- <div class="registered text-center">
+                        <span>لديك حساب؟ </span>
+                        <a href="#">سجل دخول الأن</a>
+                    </div> -->
                 </form>
             </div>
         </div>
