--- a/contact-us.html
+++ b/contact-us.html
@@ -149,7 +149,7 @@
         
         <div class="container">
             <h2 class="heading">قم بمراسلتنا</h2>
-            <div class="contact-form">
+            <div class="base-form">
                 <form action="#">
                     <div class="row">
                         <div class="col-12 col-md-5">
