--- a/forget-password.html
+++ b/forget-password.html
@@ -145,42 +145,34 @@
     </div>
 
 
-    <section class="contact-page">
+    <section class="signup-page">
         
         <div class="container">
-            <h2 class="heading">صندوق الشكاوي</h2>
+            <!-- <h2 class="heading">قم بمراسلتنا</h2> -->
             <div class="base-form">
+                <h2 class="text-center">نسيت كلمة المرور</h2>
                 <form action="#">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col-12 col-md-5">
-                            <div class="form-group">
-                                <label for="name">الإسم</label>
-                                <input type="text" placeholder="أدخل إسمك" class="form-control form-control-lg" id="name">
-                            </div>
+
                             <div class="form-group">
                                 <label for="email">البريد الإلكتروني</label>
-                                <input type="text" placeholder="ادخل بريدك الإلكتروني" class="form-control form-control-lg" id="email">
-                            </div>
-                            <div class="form-group">
-                                <label for="phone">رقم الموبايل</label>
-                                <input type="text" placeholder="ادخل رقم موبايلك" class="form-control form-control-lg" id="phone">
+                                <input type="email" placeholder="ادخل بريدك الإلكتروني" class="form-control form-control-lg" id="email">
                             </div>
 
                         </div>
-                        <div class="col-12 col-md-7">
-                            <div class="form-group">
-                                <label for="message">الرسالة</label>
-                                <textarea id="message" placeholder="ضع رسالتك هنا" rows="8" class="form-control form-control-lg"></textarea>
-                              </div>
-                        </div>
                     </div>
-                    <div class="row">
+                    <div class="row justify-content-center">
                       <div class="col-md-5">
                         <div class="send-btn">
-                          <button class="btn">أرسل الشكوى</button>
+                          <button class="btn">استرجاع كلمة المرور</button>
                       </div>
                       </div>
                     </div>
+                    <!-- <div class="registered text-center">
+                        <span>لديك حساب؟ </span>
+                        <a href="#">سجل دخول الأن</a>
+                    </div> -->
                 </form>
             </div>
         </div>
